--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <p>
         I absolutely love Bali because of its <strong>natural beauty</strong> and <strong>cultural richness</strong>. The stunning beaches, lush rice terraces, and vibrant local traditions make it a perfect destination for relaxation and exploration. Bali's warm hospitality and the variety of activities, from surfing in Uluwatu to visiting ancient temples like Uluwatu Temple, ensure there's something for everyone. It's a place where you can unwind and immerse yourself in the serene surroundings or engage in thrilling adventures, all while experiencing the unique Balinese culture.
     </p>
+    <hr>
+    <h1>Activities at vacation Spot</h1>
+    <ol>
+        <li>Visiting famous places</li>
+        <li>Enjoying beach vibes</li>
+        <li>Going for fun rides at parks</li>
+    </ol>
 </body>
 
 </html>
