--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <li>Enjoying beach vibes</li>
         <li>Going for fun rides at parks</li>
     </ol>
+    <ul>
+        <li>Sea food</li>
+        <li>Jambon-beurre</li>
+        <li>Macarons</li>
+    </ul>
+
 </body>
 
 </html>
