--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <li>Jambon-beurre</li>
         <li>Macarons</li>
     </ul>
-
+    Link to : <a href="mystats.html">My Stats</a>
 </body>
+
 
 </html>
