--- a/index.html
+++ b/index.html
@@ -31,6 +31,38 @@
         <li>Macarons</li>
     </ul>
     Link to : <a href="mystats.html">My Stats</a>
+
+    <hr>
+    <h1>My Favourite Sports</h1>
+    <table>
+        <tr>
+            <th>Sport Name</th>
+            <th>Why I Recommend It</th>
+            <th>Weekly Time</th>
+        </tr>
+        <tbody>
+            <tr>
+                <td>Tennis</td>
+                <td>Great for cardio</td>
+                <td>3-4 hours</td>
+            </tr>
+            <tr>
+                <td>Cricket</td>
+                <td>Builds strength</td>
+                <td>4-6 hours</td>
+            </tr>
+            <tr>
+                <td>Swimming</td>
+                <td>full-body workout</td>
+                <td>2-3 hours</td>
+            </tr>
+            <tr>
+                <td>Yoga</td>
+                <td>Flexibility</td>
+                <td>2-3 hours</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 
 
