--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <h1>Jayanth Anumula</h1>
+    <a href="bonus.html">bonus</a>
     <h6>My Favorite Vacation Spot: Bali</h6>
     <p>
         I absolutely love Bali because of its <strong>natural beauty</strong> and <strong>cultural richness</strong>. The stunning beaches, lush rice terraces, and vibrant local traditions make it a perfect destination for relaxation and exploration. Bali's warm hospitality and the variety of activities, from surfing in Uluwatu to visiting ancient temples like Uluwatu Temple, ensure there's something for everyone. It's a place where you can unwind and immerse yourself in the serene surroundings or engage in thrilling adventures, all while experiencing the unique Balinese culture.
@@ -24,12 +25,12 @@
         <li>Visiting famous places</li>
         <li>Enjoying beach vibes</li>
         <li>Going for fun rides at parks</li>
-    </ol>
     <ul>
         <li>Sea food</li>
         <li>Jambon-beurre</li>
         <li>Macarons</li>
     </ul>
+ </ol>  
     Link to : <a href="mystats.html">My Stats</a>
 
     <hr>
@@ -66,6 +67,7 @@
 
     <hr>
     <h1>Code Snippet and StackOverflow Link</h1>
+
     <q>Custom Error Pages in php</q>
     <a href="https://stackoverflow.com/questions/24246983/custom-404-error-page-in-php">Custom Error Pages in php StackOverflow link</a>
     <pre><?php
